--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,1 +1,5 @@
-<h1>My app name</h1>
+<div>
+  <h1>My app name</h1>
+  <%= link_to 'Log in', new_user_session_path %>
+  <%= link_to 'Sing in', new_user_registration_path %>
+</div>
