--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,9 +1,11 @@
 <div>
-  <h1>The index for groups</h1>
+  <h1>Categories</h1>
 
   <% @groups.each do |group| %>
-    <h3><%= group.name %></h3>
+    <%= link_to group_expenses_path(group.id) do %>
+      <%= render 'group_card', category: group %>
+    <% end %>
   <% end %>
 
-  <%= link_to 'Add a new group', new_group_path %>
+  <%= link_to 'Add a new category', new_group_path %>
 </div>
