Now categories displays the correct expenses

--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -8,6 +8,16 @@
   </div>
 
   <div>
+    <% groups.each do |group| %>
+    <div>
+      <%= f.label group.name %>
+     
+      <%= check_box_tag '[groups][]', group.id %>
+    </div>
+    <% end %>
+  </div>
+
+  <div>
     <%= f.submit 'Add transaction' %>
   </div>
 <% end %>
