--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,4 +1,4 @@
 <h1>add a new expense</h1>
 <div>
-  <%= render 'expense_form', expense: @expense %>
+  <%= render 'expense_form', expense: @expense, groups: @groups %>
 </div>
