--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div>
-    <%= f.number_field :amount, step: :any, placeholder: 'Insert a price' %>
+    <%= f.number_field :amount, step: :any, min: 0, placeholder: 'Insert a price' %>
   </div>
 
   <div>
