--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,4 +1,5 @@
-<h1>add a new expense</h1>
+<%= render "application/navbar", name: 'NEW EXPENSE', path: group_expenses_path(params[:group_id]) %>
+
 <div>
   <%= render 'expense_form', expense: @expense, groups: @groups %>
 </div>
