--- a/app/views/groups/_group_card.html.erb
+++ b/app/views/groups/_group_card.html.erb
@@ -1,11 +1,11 @@
-<articel>
-  <div>
-      <%= image_tag category.icon, size: "60x60", alt: "category icon" %>
+<article class="flex row align-center space-between wv-95 h-20 m-small back-white card-p">
+  <div class="flex row aling-center w-50">
+      <%= image_tag category.icon, size: "50x50", alt: "category icon" %>
+      <div class="flex ml-small">
+        <h5 class="proxima-light light-gray p-mid"><%= category.name.capitalize %></h5> 
+      </div>
   </div>
-  <div>
-    <h5><%= category.name %></h5> 
-  </div>
-  <div>
-    <span>Total: <%= Group.total(category.id) %></span>
+  <div class="flex column flex-center">
+    <span class="proxima-bold">$<%= Group.total(category.id) %></span>
   </div>
 </article>
