--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,5 @@
 <div>
+  <%= render "application/navbar", name: 'NEW CATEGORY', path: groups_path %>
+
   <%= render 'group_form', group: @group %>
 </div>
