--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,37 @@
-<h2>Sign up</h2>
+<div class="h-100 back-gray">
+
+<%= render "devise/shared/header", name: 'SINGUP', path: root_path %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="flex-center column w-100 h-40 m-small">
+  
+  <div class="field w-100">
+    <%= f.text_field :name, autofocus: true, placeholder: 'Full Name', class: 'w-100' %>
   </div>
 
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-line w-30 h-5 back-gray"></div>
+  
+  <div class="field w-100">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email', class: 'w-100' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-line w-30 h-5 back-gray"></div>
+
+  <div class="field w-100">
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Password (6 characters minimum)', class: 'w-100' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-line w-30 h-5 back-gray"></div>
+
+  <div class="field w-100">
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Password confirmation', class: 'w-100' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions w-90 m-small">
+    <%= f.submit "Sign up", class: 'blue-btn' %>
   </div>
+  </div>
+
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
